jena-shex/src/test/files/spec/negativeSyntax/open1dotcloseAnnot3.shex
# Annotation on singleton group
<http://a.example/IssueShape> {
   (<http://a.example/p1> .) ;
      <http://a.example/annot1> "1" ;
      <http://a.example/annot2> "2" ;
      <http://a.example/annot3> "3"
}
